<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pubSensors</name>
  <version>0.0.1</version>
  <description>Publishers usando rclpy para la creacion de nodos que mandes información de los sensores</description>
  <maintainer email="rotjeot@gmail.com">Eduardo Ortega</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>smbus</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>